# interactive-unet

./: .gitignore  README.md  license.txt  pyproject.toml  readme.md  readme.txt  requirements.txt  setup.py  unet.py
interactive_unet/: annotator.py  app.py  loader.py  metrics.py  predict.py  slicer.py  suggestor.py  trainer.py  unet.py  utils.py  volumedata.py
unet_app/: __init__.py  routes.py
unet_app/static/: script.js  style.css
unet_app/templates/: index.html
unet_app/unet/: loader.py  metrics.py  plot.py  predict.py  slicer.py  trainer.py  unet2d.py  utils.py
