[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interactive-unet"
version = "0.1.0"
description = "An interactive segmentation tool for 3D volumetric data."
license = { text = "BSD-2-Clause" }
requires-python = ">=3.8"

dependencies = [
  "nicegui==2.24.2",
  "torch==2.9.0",
  "torchvision==0.24.0",
  "scikit-image==0.25.2",
  "opencv-python==4.12.0.88",
  "lightning==2.5.6",
  "segmentation-models-pytorch==0.5.0",
  "scipy==1.16.3",
  "plotly==6.4.0",
  "pandas==2.3.3",
  "zarr==3.1.3",
  "numba==0.62.1",
  "joblib==1.5.2",
  "tqdm==4.67.1"
]

[project.scripts]
interactive-unet = "interactive_unet:app"

[tool.setuptools.packages.find]
include = ["interactive_unet*"]
